# runelite-wrapped

./: .gitignore  .pylintrc  README.md  docker-compose.yml  eclipse-formatter.xml  requirements.txt  settings.gradle
.vscode.example/: launch.json
apps/analytics/: README.md
apps/analytics/analytics/: __init__.py  assets.py  helpers.py  mongo.py  resources.py
apps/ingestor/: .env.example  Dockerfile  README.md  requirements.txt
apps/ingestor/ingestor/: main.py
apps/ingestor/scripts/: mock_client.py
apps/plugin/: build.gradle  runelite-plugin.properties
apps/webapp/be/: requirements.txt
common/models/: analytics.py  hiscores.py  items.py  regions.py  telemetry.py
deployment/mongodb-dev/: docker-compose.yml
docker/analytics/: Dockerfile  publish.sh
docker/ingestor/: Dockerfile  publish.sh
docker/runelite-wrapped/: docker-compose.yml
plugin/: runelite-plugin.properties
prototypes/: README.md
prototypes/stats/analysis/: README.md  build.sh  pyproject.toml
prototypes/stats/analysis/scripts/: debug.py
prototypes/stats/analysis/src/analysis/: __init__.py  __version__.py  constants.py  db.py  main.py  testmodule.py  tile_count.py
src/analytics/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/ingestor/: Dockerfile  README.md  app.py  main.py  requirements.txt
src/plugin/: README.md  build.gradle  build.gradle.old  publish.sh
src/webapp/: README.md
tutorials/: README.md
tutorials/2_fastapi/: main.py
tutorials/3_mongo_deployment/: main.sh
tutorials/4_pymongo/: main.py
tutorials/5_pandas/: main.py
(+112 files in other folders)
